fixed padding on social icons in footer section and fixed text-align on ABOUT

--- a/public/style.css
+++ b/public/style.css
@@ -19,7 +19,6 @@ html {
 
 #app {
   position: absolute;
-  text-align: center;
   width: 100vw;
 }
 
